force-app/main/default/objects/OtherACBal__c/OtherACBal__c.object-meta.xml
<CustomObject>
    <label>Other+A/C Bal</label>
    <nameField>
        <displayFormat>OTAC-{000000}</displayFormat>
        <label>OTHER+A/C BAL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other+A/C Bal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>