force-app/main/default/objects/OtherACBal__c/fields/AmountPaidFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidFormu__c</fullName>
    <formula>OtherID__r.AmountPaidOtherCost__c</formula>
    <label>AMOUNT PAID-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>