force-app/main/default/objects/OtherACBal__c/fields/AmountReceivedACBal__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedACBal__c</fullName>
    <label>AMOUNT RECEIVED-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>