force-app/main/default/objects/OtherACBal__c/fields/AmountReceivedFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedFormu__c</fullName>
    <formula>OtherID__r.AmountCollectedOtherRevenue__c</formula>
    <label>AMOUNT RECEIVED-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>