force-app/main/default/objects/OtherACBal__c/fields/OtherID__c.field-meta.xml
<CustomField>
    <fullName>OtherID__c</fullName>
    <label>OTHER ID</label>
    <referenceTo>OtherRevenueCost__c</referenceTo>
    <relationshipLabel>OTHER+A/C BAL</relationshipLabel>
    <relationshipName>OtherACBal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>