force-app/main/default/objects/OtherACBal__c/fields/RevenueDifferenceACBal__c.field-meta.xml
<CustomField>
    <fullName>RevenueDifferenceACBal__c</fullName>
    <label>REVENUE DIFFERENCE-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>