force-app/main/default/objects/OtherACBal__c/fields/RevenueDifferenceFormu__c.field-meta.xml
<CustomField>
    <fullName>RevenueDifferenceFormu__c</fullName>
    <formula>OtherID__r.DifferenceOtherRevenue__c</formula>
    <label>REVENUE DIFFERENCE-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>